# Specialized-Intelligence

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  Makefile  README.md  db_structured.md  plan.md  pyproject.toml
.github/workflows/: ci.yml  precommit.yml
components/: __init__.py  eval_blocklist.py  manifest_schema.py  phash.py
data/blocklists/: eval_seed.jsonl
data/manifests/: dry-run-2026-06-24.jsonl
docs/: plan-2026-06-20.md  plan-2026-06-24.md
docs/artifacts/: 2026-06-23-cooking-video-data.md  2026-06-23-curation-pipelines.md  2026-06-23-evaluation-and-adversarial.md  2026-06-23-legal-considerations.md  README.md  datacomp-filtering-for-video.md  hd-epic.md  howto100m.md  internvid.md  legal-landscape.md  panda70m.md  peertube-federated-crawl.md  summer-22b-and-dreamdojo.md  v-jepa-2-cluster-retrieval.md  v3c-and-license-clean-sources.md
docs/plan/: 2026-06-20.md  2026-06-23.md  2026-06-24.md
docs/research/: cooking-video-flywheel.md  strategy-comparison-framework.md
reports/: ablation-2026-06-24.json  audit-2026-06-23.json  baseline-2026-06-20.json  baseline-2026-06-24.json  dry-run-2026-06-24.json  strategies-2026-06-23.json
scripts/: audit_licenses.py  check_docs_sync.py  check_file_length.py  manifest_lint.py  pipeline_dry_run.py  precommit_forbid_paid_sources.py  precommit_forbid_youtube.py  precommit_require_license_field.py
src/specialized_intelligence/: __init__.py  cli.py  licenses.py  pipeline.py
src/specialized_intelligence/sources/: __init__.py  base.py
src/specint/: __init__.py  __main__.py  cli.py  contamination.py  fixtures.py  license_confidence.py  records.py  wm_utility.py
src/specint/audit/: __init__.py  cuisine_bias.py
src/specint/compare/: __init__.py  ablation.py  harness.py  strategies.py
src/specint/quality/: __init__.py  metrics.py
src/specint/sources/: __init__.py  archive_org.py  base.py  common_crawl.py  peertube.py  wikimedia.py
tests/: conftest.py  test_ablation.py  test_cli.py  test_contamination.py  test_e2e_compare.py  test_e2e_pipeline.py  test_quality.py  test_records.py  test_scripts.py  test_sources_archive_org.py  test_sources_common_crawl.py  test_sources_peertube.py  test_sources_wikimedia.py
tests/e2e/: test_audit_and_strategies.py  test_cli.py  test_docs_sync.py  test_license_audit.py  test_manifest_lint.py  test_pipeline.py  test_pipeline_blocklist.py
tests/e2e/fixtures/clean_shard/: _MANIFEST.json
tests/e2e/fixtures/dirty_shard/: _MANIFEST.json
tests/fixtures/archive_org/: search_cooking.json
tests/fixtures/blocklists/: youcook2_sample.jsonl
tests/fixtures/common_crawl/: recipe_page.html
tests/fixtures/peertube/: search_cooking.json
tests/fixtures/wikimedia/: search_pasta.json
tests/unit/: test_audit_cuisine_bias.py  test_compare_strategies.py  test_contamination.py  test_discovered_video.py  test_eval_blocklist.py  test_license_confidence.py  test_licenses.py  test_manifest_schema.py  test_phash.py  test_pipeline_contract.py  test_precommit_hooks.py  test_precommit_require_license_field.py  test_wm_utility.py
