[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "specialized-intelligence"
version = "0.1.0"
description = "License-clean, world-model-useful video data flywheel for frontier models (cooking-video vertical)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Specialized-Intelligence contributors" }]
dependencies = [
    "pydantic>=2.6,<3",
    "httpx>=0.27,<1",
    "beautifulsoup4>=4.12,<5",
    "lxml>=5.1,<6",
    "jsonschema>=4.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "detect-secrets>=1.5",
]

[project.scripts]
specint = "specint.cli:main"

# Layout: we ship two parallel packages so both the bootstrap adversarial
# branches (`components/` from 51ab and `src/specint/` from 45be) live side
# by side. `components/` carries manifest primitives + pHash; `src/specint/`
# carries the typed source adapters, quality scorer, and compare harness.
[tool.setuptools]
package-dir = { "" = "src", "components" = "components" }

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["specint*", "components*"]
exclude = ["tests*", "docs*", "scripts*", "reports*"]

[tool.setuptools.package-data]
specint = ["py.typed"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "e2e: end-to-end tests that may require ffmpeg",
    "integration: hits live network; skipped unless SPECINT_RUN_INTEGRATION=1",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["tests/fixtures"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
files = ["src"]
